[package]
edition      = "2021"
name         = "hello-rust"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "hello-rust"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf  = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32s3"] }
esp-println             = { version = "0.12", default-features = false, features = ["esp32s3", "uart", "critical-section"] }
esp-alloc              = "0.5"
esp-wifi               = { version = "0.10", features = ["esp32s3", "wifi", "ble", "smoltcp", "utils"] }

panic-halt = "0.2"
fugit = "0.3"
critical-section = "1.2.0"
smoltcp = { version = "0.11", default-features = false, features = [
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-tcp",
    "medium-ethernet",
] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false